--- a/style.css
+++ b/style.css
@@ -68,8 +68,17 @@ body {
   height: 1px;
   background: linear-gradient(
     270deg,
-    hsla(var(--hue), 36%, 57%, 1) 0%,
-    hsla(var(--hue), 65%, 88%, 0.34) 100%
+    hsla(var(--hue), 36%, 57%, 1),
+    hsla(var(--hue), 65%, 88%, 0.34)
+  );
+}
+
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 57%, 1)
   );
 }
 
@@ -86,6 +95,10 @@ body {
 
 .section {
   padding: 5rem 0;
+}
+
+.section .title{
+  margin-bottom: 1rem;
 }
 
 #header {
@@ -191,6 +204,27 @@ nav.show ul.grid {
   gap: 4rem;
 }
 
+/*==== TOGGLE MENU ====================== */
+.toggle {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+  right: 1.5rem;
+  /* transicao do botao */
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+}
+
 
 /*====  HOME ============================ */
 #home {
@@ -238,6 +272,44 @@ nav.show ul.grid {
 
 #home .text p {
   margin-bottom: 2rem;
+}
+
+/* ==== ABAUT ======= */
+#abaut {
+  background: white;
+}
+
+#abaut .container {
+  margin: 0;
+}
+
+#abaut .image {
+  position: relative;
+}
+
+#abaut .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#abaut .image img {
+  position: relative;
+}
+
+#abaut .image img,
+#abaut .image::before {
+  border-radius: 0.25rem;
+}
+
+#abaut .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 
