--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?z65lq0');
-  src:  url('fonts/icomoon.eot?z65lq0#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?z65lq0') format('truetype'),
-    url('fonts/icomoon.woff?z65lq0') format('woff'),
-    url('fonts/icomoon.svg?z65lq0#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?pb82g0');
+  src:  url('fonts/icomoon.eot?pb82g0#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?pb82g0') format('truetype'),
+    url('fonts/icomoon.woff?pb82g0') format('woff'),
+    url('fonts/icomoon.svg?pb82g0#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,28 +25,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-close:before {
-  content: "\e900";
-}
-.icon-cosmetic:before {
-  content: "\e901";
-}
-.icon-facebook:before {
-  content: "\e902";
-}
-.icon-instagram:before {
-  content: "\e903";
-}
-.icon-mail:before {
-  content: "\e904";
-}
-.icon-map-pin:before {
-  content: "\e905";
-}
-.icon-menu:before {
-  content: "\e906";
+.icon-arrow-up:before {
+  content: "\e90c";
 }
 .icon-phone:before {
+  content: "\e900";
+}
+.icon-close:before {
+  content: "\e901";
+}
+.icon-cosmetic:before {
+  content: "\e902";
+}
+.icon-facebook:before {
+  content: "\e903";
+}
+.icon-instagram:before {
+  content: "\e904";
+}
+.icon-mail:before {
+  content: "\e905";
+}
+.icon-map-pin:before {
+  content: "\e906";
+}
+.icon-menu:before {
   content: "\e907";
 }
 .icon-trim:before {
