--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ img {
 
   /* fonts */
   --title-font-size: 1.875rem;
+  --subtile-font-size: 1rem;
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
 }
 
 /*===  BASE ============================ */
@@ -43,14 +46,14 @@ html {
 }
 
 body {
-  font: 400 1rem 'DM Sans', sans-serif;
+  font: 400 1rem var(--body-font);
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
 }
 
 .title {
-  font: 700 var(--title-font-size) 'Poppins', sans-serif;
+  font: 700 var(--title-font-size) var(--title-font);
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
@@ -63,7 +66,7 @@ body {
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem 'DM Sans', sans-serif;
+  font: 500 1rem var(--body-font);
   transition: background 0.3s;
 }
 
@@ -101,11 +104,15 @@ body {
 }
 
 .section {
-  padding: 5rem 0;
+  padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title {
   margin-bottom: 1rem;
+}
+
+.section .subtitle {
+  font-size: var(--subtile-font-size);
 }
 
 .section header {
@@ -133,13 +140,9 @@ body {
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
 }
 
-main {
-  margin-top: calc(var(--header-height) + 2rem);
-}
-
 /*====  LOGO ============================ */
 .logo {
-  font: 700 1.31rem 'Poppins', sans-serif;
+  font: 700 1.31rem var(--title-font);
   color: var(--title-color);
 }
 
@@ -461,6 +464,10 @@ footer {
   background: var(--base-color);
 }
 
+footer.section {
+  padding: 4rem 0;
+}
+
 footer .logo {
   display: inline-block;
   margin-bottom: 1.5rem;
@@ -516,12 +523,74 @@ footer .social a:hover {
 
 /*========= MEDIA QUERIES =========*/
 /* extra large devices: 1200 > */
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+.section {
+  padding: 10rem 0;
+}
+
+.button {
+  height: 3.125rem;
+}
+
+nav .menu {
+  opacity: 1;
+  visibility: visible;
+  top: 0;
+}
+
+nav .menu ul li a.title {
+  font: 700 1rem var(--body-font);
+}
+
+nav .icon-menu {
+  display: none;
+}
+
+nav .menu ul {
+  display: flex;
+  gap: 2rem;
+}
+
+main {
+  margin-top: var(--header-height);
+}
+
+#home .container {
+  grid-auto-flow: column;
+  width: fit-content;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+#home .image {
+  order: 1;
+}
+
+#home .text {
+  order: 0;
+  max-width: 24rem;
+  text-align: left;
+}
+
+#abaut .container {
+  margin: 0 auto;
+  grid-auto-flow: column;
+}
+
+}
 
 /* large devices: 1023 > */
 /* large devices: 992 > */
 @media (min-width: 992px) {
   :root {
-    --title-font-size: 2.2rem;
+    --title-font-size: 2.25rem;
+    --subtile-font-size: 1.125rem;
   }
 }
 /* medium devices: 767 > */
