--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ img {
   --header-height: 4.5rem;
 
   /* colors */
-  --hue: 159;
+  --hue: 045;
   /* HSL color mode */
-  --base-color: hsl(var(--hue) 36% 57%);
+  --base-color: hsl(var(--hue) 165% 32%);
   --base-color-second: hsl(var(--hue) 65% 88%);
   --base-color-alt: hsl(var(--hue) 57% 53%);
   --title-color: hsl(var(--hue) 41% 10%);
@@ -148,6 +148,7 @@ body {
 }
 
 .logo span {
+  font: 700 1.61rem var(--title-font);
   color: var(--base-color);
 }
 
